[package]
name = "teamlens-tray"
version = "1.0.0"
edition = "2021"

[lib]
name = "teamlens_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[profile.release]
opt-level = "z"
lto = true
strip = true
